--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,19 @@ body {
     display: flex;
     align-items: stretch;
     justify-content: center;
-    
+    background: linear-gradient(to right, #16222A, #3A6073);
 }
 
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
-    border: 1px solid #000;
     width: 40%;
     margin: 10rem auto;
     border-radius: 25px;
     padding: 2rem;
+    background: #fff;
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 kbd {
@@ -28,7 +29,6 @@ kbd {
 }
 
 .key {
-    border: 1px solid #000;
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -36,6 +36,8 @@ kbd {
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
     transition: all .07s ease;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .playing {
